# voice_agent

./: .gitignore  404.html  LICENSE  README.md  TESTING_PLAN.md  config.yaml  config_loader.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  test_gpt_sovits.py  test_gpt_sovits_simple.py
.github/workflows/: deploy.yml
ai_driven_features/: index.html
architecture/event-system/: index.html
architecture/interaction-flow/: index.html
architecture/overview/: index.html
audio/: __init__.py  audio_driver.py  audio_player.py
bilibili/: README.md  __init__.py  api.py  bilibili_client.py  config.yaml  example.py  manager.py  models.py  server.py  settings.py
bilibili/static/: client-example.py  dashboard.html  obs.html
chat_summarizer/: QUICKSTART.md  README.md  __init__.py  api.py  message_buffer.py  models.py  server.py  summarizer.py
components/audio_player/: index.html
components/stt/: index.html
components/tts/: index.html
core/: config.py  event_bus.py  logging.py  priority_queue.py  server.py
core/metrics/: history.py  models.py
core/settings/: __init__.py  audio.py  base.py  bilibili.py  llm.py  obs.py  ocr.py  orchestrator.py  reload_coordinator.py  reload_result.py  services.py  stt.py  tts.py
docs/: ai_driven_features.md  index.md
docs/architecture/: event-system.md  interaction-flow.md  overview.md
docs/components/: audio_player.md  stt.md  tts.md
docs/guide/: configuration.md  installation.md
docs/services/: audio_player.md  stt.md  tts.md
guide/configuration/: index.html
guide/installation/: index.html
llm/: __init__.py  base.py  llm_server.py  models.py
llm/providers/: __init__.py  gemini.py  llamacpp.py  ollama.py  openai.py
llm/utils/: __init__.py  image_utils.py
ocr/: README.md  __init__.py  example_usage.py  manosaba.py  ocr.py  ocr_server.py  pyproject.toml  region_manager.py
orchestrator/: agent.py  config.py  context_manager.py  driver.py  events.py  hotkey_manager.py  latency_tracker.py  logging_config.py  ocr_client.py  pyproject.toml  requirements.txt  server.py  stt_client.py  system_prompt.txt
orchestrator/api/: __init__.py  config.py  dependencies.py  health.py  hotkeys.py  metrics.py  models.py  routes.py  tools.py  ui.py
orchestrator/clients/: __init__.py  base.py  obs_client.py
orchestrator/core/: activity_state.py  constants.py  models.py
orchestrator/managers/: __init__.py  base.py  context_manager.py  interaction_manager.py  interruption_manager.py  latency_manager.py  metrics_manager.py  queue_consumer.py  queue_manager.py  subtitle_manager.py  tool_execution_manager.py  tts_manager.py
orchestrator/memory/: __init__.py  storage.py
orchestrator/sources/: __init__.py  base.py  bilibili_source.py  bilibili_websocket_source.py  stt_source.py
orchestrator/static/: app.js  styles.css  ui.html
orchestrator/tools/: __init__.py  example_tools.py  memory_tools.py  registry.py
orchestrator/utils/: __init__.py  event_helpers.py  llm_factory.py  stream_processor.py  text_processing.py
scripts/: auto_summarize.py  check_llama_gpu.py  check_services.py  debug_hotkeys.py  inspect_memories.py  list_output_devices.py  measure_latency.py  start_services.py  stop_services.py  test_audio_player.py  test_bilibili_source.py  test_image_chat.py  test_llm_chat.py  test_llm_stream.py  test_tts.py  validate_history_unification.py  verify_gpu_setup.py
search/: search_index.json
services/audio_player/: index.html
services/stt/: index.html
services/tts/: index.html
stt/: api.py  base.py  manager.py  server.py  stt_server.py
stt/providers/: __init__.py  faster_whisper.py  funasr.py
stt_server/: pyproject.toml  requirements.txt  stt_server.py
tests/orchestrator/: test_interaction.py
tests/stt/: test_stt_manager.py
tests/tts/: test_tts_manager.py
tts/: __init__.py  api.py  base.py  engine.py  manager.py  server.py  tts_server.py
tts/providers/: __init__.py  chattts.py  edge_tts.py  elevenlabs.py  genie_tts.py  gpt_sovits.py
vn_commentary/: README.md  __init__.py  commentary_analyzer.py  config.yaml  context_manager.py  dialogue_reader.py  example_dialogue.json  example_dialogue_summary.txt  gatekeep_system_prompt.txt  main.py  models.py  summary_generator.py
vn_commentary/Act01_Chapter01/: Act01_Chapter01_Adv01.json  Act01_Chapter01_Adv02.json  Act01_Chapter01_Adv03.json  Act01_Chapter01_Adv04.json  Act01_Chapter01_Adv05.json  Act01_Chapter01_Adv06.json  Act01_Chapter01_Adv07.json  Act01_Chapter01_Adv08.json  Act01_Chapter01_Adv09.json  Act01_Chapter01_Adv10.json  Act01_Chapter01_Adv12.json  Act01_Chapter01_Adv13.json  Act01_Chapter01_Adv14.json  Act01_Chapter01_Adv15.json  Act01_Chapter01_Adv16.json  Act01_Chapter01_Adv17.json  Act01_Chapter01_Adv18.json  Act01_Chapter01_Adv19.json  Act01_Chapter01_Adv20.json  Act01_Chapter01_Adv21.json  Act01_Chapter01_Adv22.json  Act01_Chapter01_Adv23.json  Act01_Chapter01_Adv24.json  Act01_Chapter01_Adv26.json  Act01_Chapter01_Adv27.json  Act01_Chapter01_Adv28.json  Act01_Chapter01_Adv29.json  Act01_Chapter01_Adv30.json  Act01_Chapter01_Adv31.json  Act01_Chapter01_Adv32.json  Act01_Chapter01_Adv33.json  Act01_Chapter01_Adv34.json  Act01_Chapter01_Adv35.json  Act01_Chapter01_Adv36.json  Act01_Chapter01_Bad01.json  Act01_Chapter01_Bad02.json  Act01_Chapter01_Bad03.json  Act01_Chapter01_Bad04.json  Act01_Chapter01_Bad05.json  (+19 more)
(+18 files in other folders)
